<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@android:style/Theme.Dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_in_card_nr"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/number_location"
        android:id="@+id/numberLocationImage"
        android:layout_below="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_location"
        android:gravity="center"
        android:id="@+id/numberLocation"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/numberLocationImage"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edencard_number"
        android:ems="10"
        android:maxEms="10"
        android:maxLength="10"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/numberLocation"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_notify"
        android:id="@+id/notifyBox"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edencard_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="horizontal"
        android:layout_below="@+id/notifyBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/exit_btn"
            android:id="@+id/exit_button" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/apply_btn"
            android:id="@+id/apply_button" />

    </LinearLayout>

</RelativeLayout>